--- a/styles/auth.less
+++ b/styles/auth.less
@@ -58,7 +58,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1000;
+    z-index: 100001;
 }
 
 .auth-modal-content {
